--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G3 Structure Website</title>
+    <title>G3 Architects Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Header Section Starts Here -->
+    <header class="header">
+        <nav class="nav-container">
+            <div class="nav-title">
+                <h3>G3 Architects</h3>
+            </div>
+            <div class="nav-item">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Log in</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="header-article-container">
+            <div class="header-article">
+                <h1>Brand New Group of Architects </h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even.</p>
+            </div>
+            <button class="btn-primary">Explore More</button>
+        </div>
+        <div class="header-banner">
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
