--- a/index.html
+++ b/index.html
@@ -29,12 +29,116 @@
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even.</p>
             </div>
             <button class="btn-primary">Explore More</button>
-        </div>
-        <div class="header-banner">
-            <img src="images/banner.png" alt="">
-        </div>
+            <div class="header-banner">
+                <img src="images/banner.png" alt="">
+            </div>
+            </div>    
     </header>
-    <main></main>
-    <footer></footer>
+    <!-- Ends of header Section -->
+    <!-- Main section starts here -->
+    <main>
+        <section class="article-1-container">
+            <div class="article-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="article-blog">
+                <h3>Quick list <span style="color: #131313;">of Our</span> <span style="color: #FF900E;">Features</span></h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+        <section class="article-2-container">
+            <div class="article-2-part-1">
+                <div class="article-2-title">
+                    <h3>Features you will love & enjoy</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="article-2-blog-container">
+                        <div class="article-2-blog">
+                            <h4>Dexktop & Mobile Version</h4>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="article-2-blog">
+                            <h4>Drag & Drop Builder</h4>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="article-2-blog">
+                            <h4>Awesome Modern Design</h4>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="article-2-blog">
+                            <h4>Super Easy to Edit</h4>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="article-2-part-2">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary" style="width: 342px; height: 200px; font-weight: 700; font-size: 65px;"><span style="">10+Year</span> <br> <br> <span style="font-weight: 500; font-size: 25px; line-height: 40px; text-align: center; color: #FFFFFF;">Experience</span></button>
+            </div>
+        </section>
+        <section class="some-facts" >
+            <div class="some-facts-title">
+                <h3>Some Facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="facts-item-container">
+                <div class="facts-item">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <p>Award Winings</p>
+                </div>
+                <div class="facts-item">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Projects Finished</p>
+                </div>
+                <div class="facts-item">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="facts-item">
+                    <img src="images/icons/email.png" alt="">
+                    <h3>22578</h3>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </section>
+        <section class="our-sponsor">
+            <div class="our-sponsor-title">
+                <h3>Our Sponspors</h3>
+                <p class="our-sponsor-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="our-sponsor-item-container">
+                <div class="our-sponsor-item">
+                    <img src="images/sponsors/spotify.png" alt="">
+                </div>
+                <div class="our-sponsor-item">
+                    <img src="images/sponsors/amazon.png" alt="">
+                </div>
+                <div class="our-sponsor-item">
+                    <img src="images/sponsors/google.png" alt="">
+                </div>
+                <div class="our-sponsor-item">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+                <div class="our-sponsor-item">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+            
+        </section>
+
+    </main>
+    <!-- Main section ends here -->
+    
+    <footer class="footer">
+        <p>All rights reserved copyright@2023 Maruf-ProgrammingHero</p>
+    </footer>
 </body>
 </html>
